<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivRegisterBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/signup"
        android:textColor="@color/purple"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/name"
        android:alpha="0.5"
        android:inputType="text"
        android:textColorHint="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/email"
        android:alpha="0.5"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/etAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/address"
        android:alpha="0.5"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/etRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etRegion"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/region"
        android:alpha="0.5"
        android:inputType="textPersonName"
        android:textColorHint="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/password"
        android:alpha="0.5"
        android:inputType="textPassword"
        android:textColorHint="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/etConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:alpha="0.5"
        android:inputType="textPassword"
        android:textColorHint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:background="@drawable/button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintVertical_bias="0.153" />



    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveAnAccount"
        android:textColor="@color/purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/tvAccount"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintVertical_bias="0.744" />

</androidx.constraintlayout.widget.ConstraintLayout>